Fixed modification for the first and last background styles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
     "extends": "./node_modules/grapesjs-cli/dist/template/tsconfig.json",
-    "include": ["src"]
+    "include": ["src"],
+    "compilerOptions": {"noImplicitAny": false},
 }
